--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+.DS_Store
+*.log
+node_modules
+node_modules/
+*.node
+components
+coverage
+*.orig
+.idea
+sandbox
+test/out-fixtures/*
+test/watch-*.txt
+gulp.1
+
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
